tests/reference/asr-subroutine6-265d498.stderr
semantic error: Dummy argument 'array' not defined
 --> tests/errors/subroutine6.f90:1:1 - 3:14
  |
1 |    subroutine sub (array)
  |    ^^^^^^^^^^^^^^^^^^^^^^...
...
  |
3 |    end subroutine
  | ...^^^^^^^^^^^^^^ 
